--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@ nav {
     justify-content: space-between;
     flex-wrap: wrap;
     align-items: stretch;
+    padding: 20px;
 }
 
 .quiz-container {
