--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,14 @@ nav {
     padding: 20px;
 }
 
+#highscore {
+    color: hotpink;
+}
+
+#highscore:hover {
+    color:navy;
+}
+
 .quiz-container {
     width: 400px;
     margin: auto;
@@ -28,9 +36,24 @@ nav {
 }
 
 .quiz-container li:hover {
-    background-color: pink;
+    background-color: hotpink;
     color: navy;
     list-style-type: none;
+}
+
+.quiz-container button {
+    margin: 10px;
+    padding: 5px;
+    color: white;
+    background-color: navy;
+    border-radius: 10px;
+    border-style: none;
+
+
+}
+
+.quiz-container button:hover {
+    background-color: hotpink;
 }
 
 h3 {
