--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,9 +41,10 @@ p, label {
 
 .quiz-container li {
     text-align: left;
-    width: 150px;
+    font-size: 3vw;
+    width: 30%;
     margin: 20px;
-    padding: 10px;
+    padding: 1.5%;
     color: white;
     background-color:navy;
     border-radius: 10px;
@@ -58,7 +59,7 @@ p, label {
 
 #scoreList {
     text-align: left;
-    width: 260px;
+    width: 80%;
     margin: 20px;
     padding: 10px;
     color: black;
@@ -89,6 +90,13 @@ h3 {
     color: gray;
     text-align: left;
     font-size: 4vw;
+}
+
+#userInitials {
+    width: 5vw;
+    height: 3vw;
+    font-size: 2.5vw;
+    
 }
 
 /* end  */
